# ChangeLog for app-misc/cl-tools-meta
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-tools-meta-12.0 (22 Jun 2012)

  22 Jun 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.15-r3.ebuild, +cl-tools-meta-12.0.ebuild:
  version bump

  13 Apr 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-tools-meta-11.15-r2.ebuild:
  add sys-process/lsof in the CLD

*cl-tools-meta-11.15-r2 (03 Apr 2012)

  03 Apr 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.15-r1.ebuild, +cl-tools-meta-11.15-r3.ebuild:
  Add sys-kernel/module-rebuild for CLS

*cl-tools-meta-11.15-r1 (12 Mar 2012)

  12 Mar 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.15.ebuild, +cl-tools-meta-11.15-r1.ebuild:
  remove sys-fs/ntfsprogs

*cl-tools-meta-11.15 (07 Mar 2012)

  07 Mar 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.12.ebuild, +cl-tools-meta-11.15.ebuild:
  version bump

*cl-tools-meta-11.12 (05 Dec 2011)

  05 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.9-r5.ebuild, +cl-tools-meta-11.12.ebuild:
  version bump

*cl-tools-meta-11.9-r5 (18 Nov 2011)

  18 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.9-r4.ebuild, +cl-tools-meta-11.9-r5.ebuild:
  remove emerge-delta-webrsync, ufed

*cl-tools-meta-11.9-r4 (11 Nov 2011)

  11 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.9-r3.ebuild, +cl-tools-meta-11.9-r4.ebuild:
  add sys-fs/ntfsprogs

*cl-tools-meta-11.9-r3 (10 Nov 2011)

  10 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.9-r2.ebuild, +cl-tools-meta-11.9-r3.ebuild:
  remove genlop

*cl-tools-meta-11.9-r2 (06 Nov 2011)

  06 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.9-r1.ebuild, +cl-tools-meta-11.9-r2.ebuild:
  remove genlop

*cl-tools-meta-11.9-r1 (23 Oct 2011)
