@@ -1,2 +1,2 @@
-EBUILD cl-tools-meta-12.0.ebuild 3126 RMD160 0648ae57a16c4ae37335dd5708d9c448b54560cb SHA1 9cb69679476d8e0b78cf8949d315a754595adbe4 SHA256 b7ef23fe74aee10afc8c491acc4753b0ccac3c93b80a5caf25b8e8f2f7c77ae5
-MISC ChangeLog 6029 RMD160 ed2160c07332e0c86bcb0bb662f251346ef3d2ab SHA1 e2ddccd07792b891ce8a7e20d0bf7b65e1a5c9af SHA256 ab70c4913fd4db24bb409f9b1e7350b840c5056c550ec8b22b8a160021f7559e
+EBUILD cl-tools-meta-12.0-r1.ebuild 3194 SHA256 4ba2d236882bd17f2c060b09a2aa729730c31fa1c460188a6e8baeadb7e005bf SHA512 a4f279cf6a10e7f9d7c02980a5ef379011c9824a9dfa6a2dfe3cbb45e3e657b3b24116bf711075bf2b008760563c5f2de31ad80fdc11bd2e6233dfae1b9be24b WHIRLPOOL a5ca693c018b95beaea435d8ff794e8343488ee125fe2a5172d735d179a70385b4c33c2b81102e2b79777b6ea5ef4eacc3808521c93dfcb366da3694ac84b72e
+MISC ChangeLog 6211 SHA256 6954e73570e7e80bb9e0e11566ddf12a6e60240bc06e0bc88d9374385c4a05e8 SHA512 a1e8feaa49548c9fd501d36d53703fac23fcc2cc16b0ce9d07cb95592aa2a732a736396f021edfdccd7dca1ee117b58d31829525bc98d7e8d6bcb7ef263b89b4 WHIRLPOOL a17e7735dedb755cda98590689fce73998d3afca5e018128efc8816f3cb971154dd04ff39a596d735d9838621b74b1929a38e048c0e7f8f178179df70864b215
